HoangDMHE191087- Implement Home page, UI tweaks, and auth fixes
Add a full HomeServlet (/home) with DB-backed Category/Product DAOs and a premium mock-data fallback (flash sale, categories, filters, countdown). Overhaul guest home JSP with rich UI, Tailwind styles, scripts and new tags/formatting. Improve auth flows: RegisterServlet now forwards with request-scoped errorMsg instead of redirecting; login/register JSPs restore submitted params. Update header/navbar to use contextPath, show user state, and style buttons. DB schema: set defaults for users.role/status and products.status. Adjust NetBeans project/build files (libraries, build-impl tweaks, genfiles CRCs, project properties). Add /dist to .gitignore and replace web/index.html with index.jsp. Also small fixes: CurrencyFormatTag locale call changed.